Wed Apr 14 11:29:56 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* numeric.c (flo_eq): workaround for bcc32's bug.
	  (ruby-bugs-ja:PR#594)

Wed Apr 14 10:57:40  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* defines.h: include <net/socket.h> to get fd_set definition in BeOS.

Tue Apr 13 23:00:55 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/rinda.rb: change pattern matching. 
	  a === b -> a == b || a === b. [druby-ja:98]

	* test/rinda/test_rinda.rb: ditto.

Tue Apr 13 21:50:57 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bcc32/Makefile.sub (PHONY): Borland make disallows empty command
	  rules.

Tue Apr 13 17:55:16 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (begin_transport): should not overwrite HTTP
	  request header. [ruby-list:39543]

Tue Apr 13 16:48:00 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/pop.rb: merge POP3S patch.  This patch is contributed by
	  Daniel Hobe.

Tue Apr 13 02:56:29 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* common.mk: changed the order of ascii.c alphabetically.

Mon Apr 12 19:11:21 2004  Eric Hodel  <drbrain@segment7.net>

	* gc.c (rb_gc_copy_finalizer): typo.  [ruby-core:02774]

Mon Apr 12 18:45:58 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_x509name.c (ossl_x509name_init_i): should return
	  a value.

Mon Apr 12 10:39:50  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (rb_glob2, rb_glob, push_globs, push_braces, rb_push_glob):
	  fix memory leak to occur when block is interrupted in Dir.glob.

Sun Apr 11 19:10:13 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (require_libraries): restore source file/line after
	  statically linked extensions initialized.  [ruby-dev:23357]

Sun Apr 11 10:47:04 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/code_objects.rb (RDoc::TopLevel::add_class_or_module): Toplevel
	  classes and modules are a special case too... (handle extending existing
	  classes with or without :enddoc:)
