@@ -1613,7 +1613,7 @@ rb_f_spawn(argc, argv)
  *  call-seq:
  *     sleep(duration=0)    => fixnum
  *  
- *  Suspends the current thread for _duraction_ seconds (which may be
+ *  Suspends the current thread for _duration_ seconds (which may be
  *  any number, including a +Float+ with fractional seconds). Returns the actual
  *  number of seconds slept (rounded), which may be less than that asked
  *  for if the thread was interrupted by a +SIGALRM+, or if
